# LNP-MFGM

./: .gitignore  README.md  pyproject.toml
experiments/data/mmseq/: mmseq2_30_pct_remove_list.txt
experiments/data/scripts/: A1_1_extract_pocket_plinder.py  A1_2_get_plinder_lmdb.py  A2_1_extract_pocket_zincdock.py  A2_2_get_zincdock_lmdb.py  _a_refine.py  _b1_smi_to_block.py  _b2_save_block_data.py  _b3_create_workflow.py  a_catalog_to_smi.py  a_refine_smi.py  a_stock_to_smi.py  b_create_env.py  estimate_search_space_size.py
experiments/scripts/: analysis1_time_scheduling.py  analysis2_fm_nsteps.py  analysis2_sampling.py  exp1_redock_unidock.py  exp2_finetune.py  exp2_localopt_autodock.py  exp3A_sbdd_proxy.py  exp3B_sbdd_unidock.py  exp3C_sbdd_localopt.py  exp3Z_sampling.py  expA_topo2.py  expB_topoA_debug.py  expC1_service_sbdd_proxy.py  run1_redock_unidock.py
experiments/sweep/: fm_nsteps.yaml  fm_time_scheduling.yaml  localopt-finetune.yaml  localopt.yaml  redock.yaml  topo2-localopt.yaml
scripts/: A1_semlaflow_single_pocket.sh  A1_semlaflow_single_pocket_evaluate.sh  A1_semlaflow_single_pocket_evaluate_finetune.sh  A_semlaflow_train_ar_plinder.sh  A_semlaflow_train_crossdocked_denovo.sh  _a1_semlaflow_train.py  _a2_semlaflow_eval.py  _a2_semlaflow_evaluate.py
src/cgflow/: scriptutil.py
src/cgflow/buildutil/: __init__.py  build_dm.py  build_model.py  build_trainer.py
src/cgflow/data/: datamodules.py  datasets.py  interpolate.py  util.py
src/cgflow/gvp/: __init__.py  atom3d.py  data.py  models.py  pocket.py
src/cgflow/models/: complex_fm.py  fm.py  pocket.py  pocket_v2.py  semla.py
src/cgflow/util/: algorithms.py  complex_metrics.py  evaluations.py  functional.py  harmonic.py  loss.py  metrics.py  molrepr.py  pocket.py  profile.py  rdkit.py  tokeniser.py  visualize.py
src/gflownet/: __init__.py  config.py  online_trainer.py  trainer.py
src/gflownet/algo/: advantage_actor_critic.py  config.py  flow_matching.py  (+4 more)
src/rxnflow/: config.py
src/synthflow/: config.py
tests/: A_synthflow_unidock.py  B_synthflow_autodock.py  C_synthflow_pocket_conditional.py  Z_api_debug.py  functional.py
(+102 files in other folders)
